--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "firebase": "^8.7.0",
+    "moment": "^2.29.1",
     "peerdeps": "^1.1.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
